--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ playground.xcworkspace
 
 .build/
 
+# Build folders
+build/
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
