--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -64,3 +63,84 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# IDE - VSCode
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Xcode specific
+*.xccheckout
+*.xcscmblueprint
+xcschememanagement.plist
+
+# Provisioning profiles
+*.mobileprovision
+*.provisionprofile
+
+# Code coverage
+*.gcov
+*.gcno
+*.gcda
+coverage/
+
+# SwiftLint
+.swiftlint.yml.backup
+
+# Archives
+*.xcarchive
+
+# Temporary files
+*~
+*.tmp
+*.swp
+*.lock
+*.log
+
+# Node.js dependencies (if using any JS tooling)
+node_modules/
+npm-debug.log*
+
+# Python (if using any Python scripts)
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Backup files
+*.backup
+*.bak
+*.orig
